--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@portabletext/react": "^2.0.2",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.8.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "g": "^2.0.1",
     "next": "13.2.4",
     "next-sanity": "^4.1.6",
     "next-sanity-image": "^6.0.0",
@@ -21,5 +23,8 @@
     "react-hot-toast": "^2.4.0",
     "sanity": "^3.8.2",
     "swiper": "^9.2.0"
+  },
+  "devDependencies": {
+    "@sanity/client": "^5.4.2"
   }
 }
