--- a/sanityBotique/package.json
+++ b/sanityBotique/package.json
@@ -15,7 +15,9 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.0.0",
+    "@sanity/client": "^5.4.2",
+    "@sanity/vision": "^3.8.3",
+    "@sanity/webhook": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
