--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "sanity": "^3.8.2",
+    "sharp": "^0.32.0",
     "swiper": "^9.2.0"
   },
   "devDependencies": {
